overflow fixed?

--- a/style.css
+++ b/style.css
@@ -221,10 +221,11 @@ nav {
         flex-direction: column;
         align-items: center;
         width: 50%;
-        transform: translateX(70%); /* OVERFLOW FEJL LÅ HER */
+        transform: translateX(0%); /* OVERFLOW FEJL LÅ HER */
         transition: 0.5s ease-in;
         font-size: 0.875rem;
         overflow-x: hidden;
+        z-index: 2;
     }
 
    .nav-links li {
@@ -238,14 +239,12 @@ nav {
 
     .nav-links li:hover {
         border-bottom: none;
-        overflow-x: hidden;
     }
 
     .nav-links a {
         color: black;
         width: 80%;
         display: none;
-        overflow-x: hidden;
     }
 
     .burger {
@@ -260,8 +259,7 @@ nav {
         transform: translateX(4%);
         background-color: #ced8df;
         border: 1px #1111110e solid;
-        z-index: 3;
-        overflow-x: hidden;
+        z-index: 5;
     }
 
     .nav-active a {
@@ -271,18 +269,15 @@ nav {
         display: table-cell; 
         vertical-align: middle;
         text-align: center;
-        overflow-x: hidden;
     }
 
     .nav-active li:hover {
         background: #c8d1d7;
-        overflow-x: hidden;
     }
 
     .nav-links li:hover a {
         color: black;
         font-weight: 700;
-        overflow-x: hidden;
     }
 
     @keyframes navLinkFade {
@@ -335,7 +330,7 @@ nav {
   /* Booking CTA Index */
 #herobooking {
   display: flex;
-  z-index: 1;
+  z-index: 3;
   position: absolute; 
   left: 50%; 
   top: 50%;
